@@ -1081,6 +1081,15 @@ sub is_search_engine {
 		return 0;
 	}
 
+	# Don't use HTTP_USER_AGENT to detect more than we really have to since
+	# that is easily spoofed
+	if($ENV{'HTTP_USER_AGENT'} =~ /www\.majestic12\.co\.uk/) {
+		if($self->{_cache}) {
+			$self->{_cache}->set("is_search/$remote", 1, '1 day');
+		}
+		return 1;
+	}
+
 	my $remote = $ENV{'REMOTE_ADDR'};
 	if($self->{_cache}) {
 		my $is_search = $self->{_cache}->get("is_search/$remote");
@@ -1091,7 +1100,7 @@ sub is_search_engine {
 
 	# TODO: DNS lookup, not gethostbyaddr - though that will be slow
 	my $hostname = gethostbyaddr(inet_aton($remote), AF_INET) || $remote;
-	if($hostname =~ /google\.|msnbot/) {
+	if($hostname =~ /google\.|msnbot|/) {
 		if($self->{_cache}) {
 			$self->{_cache}->set("is_search/$remote", 1, '1 day');
 		}
